Fixed Headshot Filename to be proper

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table>
     <tr>
-      <td><img src="headshot-circle.png" alt="LisaKoskey" WIDTH=280></td>
+      <td><img src="Headshot-Circle.png" alt="LisaKoskey" WIDTH=280></td>
       <td>
         <h1>Lisa Koskey</h1>
         <h3>Footlocker.com/Eastbay</h3>
@@ -24,12 +24,12 @@
   <h3>Work Experience</h3>
   <!-- NOTE: Can put headers in without specifying thead however if need
 to write code formatting header or footer need that thead in there so it formats only that -->
-  <table cellspacing="20">
+  <table cellspacing="8">
     <tr>
       <thead>
         <th>Company</th>
         <th>dates</th>
-        <th>Job Titls</th>
+        <th>Job Titles</th>
       </thead>
     </tr>
     <tr>
