--- a/MyHobbies.html
+++ b/MyHobbies.html
@@ -12,6 +12,7 @@
     <li><a href="woodworking.jpg">Woodworking</a></li>
     <li><a href="winemaking.jpg">Wine Making</a></li>
     <li><a href="kayaking.jpg">Kayaking</a></li>
+    <li>And More</li>
   </ul>
   <a href="index.html">Back to Main Page</a>
 </body>
